tests/parser-test-files/bad-files/parse-continue.3.error
error: Invalid label in continue
  --> test:6:14
   |
 6 |      (continue :not-foo)))
   |                ^^^^^^^^ label not found in any enclosing loop
